# kiso

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  tox.ini
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md  improvement.md  task.md
.github/workflows/: pre-commit.yaml  release.yaml  tests.yaml
docs/: CLAUDE.md  api.rst  clt.rst  concepts.rst  conf.py  example-experiments.md  experiment-configuration-schema.rst  experiment-configuration.rst  extending.rst  funding.md  getting-started.md  index.rst  introduction.md  references.md
docs/_includes/deploy-htcondor/: experiment.yml
docs/_includes/multi-testbed-experiment/: experiment.yml  secrets  workflow.py
docs/_includes/multi-testbed-experiment/aaaa/: env
docs/_includes/multi-testbed-experiment/output/: env
docs/_static/assets/css/: custom.css
docs/_static/examples/: kiso-plankifier-experiment.yml
docs/_templates/: extra-footer.html
docs/about/: citing.md  contact.md  contributing.md  external-links.md  funding.md  license.md
docs/concepts/: components.md  config-anatomy.md  experiment-model.md  what-is-kiso.md
docs/examples/: colmena.md  index.md  multi-pydantic-agents.md  network-measurement-experiment.md  orcasound.md  plankifier.md  pydantic-agent.md
docs/extending/: add-deployment.md  add-experiment-type.md  add-software.md  how-extensions-work.md
docs/extending/reference/: deployment-interface.md  experiment-type-interface.md  software-interface.md
docs/how-to/: collect-results.md
docs/how-to/deployments/: htcondor.md
docs/how-to/experiment-types/: pegasus.md  shell.md
docs/how-to/software/: apptainer.md  docker.md  ollama.md  shell.md
docs/how-to/testbeds/: chameleon-edge.md  chameleon.md  fabric.md  vagrant.md
docs/introduction/: getting-started.md  introduction.md
docs/reference/: api.md  cli.md  config.md  glossary.md  output-formats.md  testbed-parameters.md
docs/tutorials/: first-experiment.md  multi-testbed.md
src/kiso/: __main__.py  configuration.py  constants.py  display.py  edge.py  errors.py  ip.py  log.py  objects.py  schema.py  task.py  utils.py  version.py
src/kiso/apptainer/: installer.py  main.yml
src/kiso/commons/: init.sh  main.yml
src/kiso/deployment/: __init__.py
src/kiso/deployment/htcondor/: configuration.py  htcondor.sh  installer.py  main.yml  pegasus.sh
src/kiso/experiments/: __init__.py
src/kiso/experiments/pegasus/: configuration.py  runner.py  schema.py
src/kiso/experiments/shell/: configuration.py  runner.py  schema.py
src/kiso/htcondor/: init.sh  installer.py  main.yml  schema.py
src/kiso/ollama/: configuration.py  installer.py  ollama.sh
src/kiso/pegasus/: runner.py
src/kiso/shell/: configuration.py  display.py  runner.py  schema.py
src/kiso/software/: __init__.py
src/kiso/software/apptainer/: apptainer.sh
src/kiso/software/docker/: installer.py
src/kiso/software/ollama/: installer.py  main.yml  ollama.sh
src/kiso/software/shell/: __init__.py  configuration.py  (+3 more)
src/kiso/workflow/: configuration.py  pegasus.py  schema.py
tests/: test__main__.py  test_display.py  test_errors.py  test_log.py  test_objects.py  test_task.py  test_task_misc.py  test_utils.py
tests/apptainer/: test_installer.py
tests/deployment/htcondor/: test_installer.py
tests/docker/: test_installer.py
tests/experiments/pegasus/: test_runner.py
tests/experiments/shell/: test_runner.py
tests/htcondor/: test_installer.py
tests/ollama/: test_installer.py
tests/pegasus/: test_runner.py
tests/resources/check/: test-1.yml  test-invalid.yml
tests/shell/: test_runner.py
tests/software/apptainer/: test_installer.py
tests/software/docker/: test_installer.py
tests/software/ollama/: test_installer.py
web/: assets  help.html  index.html
